# icboc

./: )  .gitignore  Cargo.toml  README.md  clippy.toml
src/: commands.rs  constants.rs  error.rs  lib.rs  main.rs  rpc.rs  spend.rs  util.rs  wallet.rs
src/commands/: getnewaddress.rs  importdescriptor.rs  info.rs  init.rs  listunspent.rs  mod.rs  receive.rs  rescan.rs  signrawtransaction.rs
src/commands/importicboc/: aes.rs  mod.rs
src/dongle/: ledger.rs  message.rs  mod.rs
src/lib/: constants.rs  error.rs  lib.rs  spend.rs  util.rs
src/lib/dongle/: ledger.rs  message.rs  mod.rs  tx.rs
src/lib/wallet/: address.rs  chacha20.rs  crypt.rs  mod.rs  serialize.rs  txo.rs
src/lib/wallet/encode/: chacha20.rs  crypt.rs  mod.rs  serialize.rs
src/wallet/: mod.rs  serialize.rs
