[package]
name = "icboc"
version = "3.0.0"
authors = ["Andrew Poelstra <icboc3d@wpsoftware.net>"]
edition = "2018"

[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "icboc3d"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
byteorder = "1.0"
jsonrpc = "0.12"
hidapi = "1.2"
home = "0.5"
miniscript = { version = "4.0", path = "../../rust-bitcoin/miniscript/2021-01--wpk-improvements", features = ["use-serde"] }
thiserror = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
time = "0.2"

